# stepshift

./: .gitignore  Makefile  dev_requirements.txt  pyproject.toml  setup.py  stepshift.py
.github/workflows/: ci.yml
stepshift/: cast.pyx  stepshift.py  util.py  views.py
tests/: test_bootstrapping.py  test_stepshift.py  test_views.py  test_views_utilities.py
