[tool.poetry]
name = "stepshift"
version = "0.3.0"
description = "Time-step shifting modelling logic, used by the ViEWS team for training models."
authors = ["peder2911 <pglandsverk@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pandas = "^1.2.4"
PyMonad = "^2.4.0"
toolz = "^0.11.1"
numba = "^0.54.0"
Cython = "^0.29.24"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
